# BCrypter

./: .gitignore  .travis.yml  Cargo.toml  License-MIT.md  Readme.md
benches/: lib.rs
src/: b64.rs  errors.rs  lib.rs  utils.rs
tests/: lib.rs  mod.rs
