[package]
name = "bcrypter"
version = "0.1.0"
authors = ["Mitchell Berry <mitchellberry@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "password", "hashing", "bcrypt"]
description = ""

[dependencies]
blowfish = { version = "0.3.0", features = ["bcrypt"] }
base64 = "0.9.3"
rand = "0.5.5"
